apply plugin: 'com.android.application'

dependencies {
    // AndroidX dependencies - latest stable versions
    // Note: removed androidx.legacy:legacy-support-v4 - use AndroidX APIs directly
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.google.android.material:material:1.11.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
    implementation 'androidx.core:core-ktx:1.12.0'

    // Security library for encrypted preferences and secure credential storage
    // Provides AES-256-GCM encryption for sensitive data
    implementation 'androidx.security:security-crypto:1.0.0'
    
    // Apache Commons - updated versions with security fixes
    implementation 'org.apache.commons:commons-compress:1.24.0'
    implementation 'commons-net:commons-net:3.9.0'
    
    // Other dependencies - updated versions
    implementation 'com.github.zafarkhaja:java-semver:0.9.0'
    implementation 'org.unbescape:unbescape:1.1.6.RELEASE'
    // msgpack for Metasploit RPC communication
    // Note: Using 0.6.12 for API compatibility - upgrading to 0.9.x requires refactoring RPCClient
    implementation 'org.msgpack:msgpack:0.6.12'
    implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
    implementation 'org.tukaani:xz:1.9'
    
    // ACRA crash reporting - updated
    implementation 'ch.acra:acra-core:5.11.3'
    implementation 'ch.acra:acra-http:5.11.3'
    implementation 'ch.acra:acra-notification:5.11.3'
    
    // Testing
    testImplementation 'junit:junit:4.13.2'

    // JUnit5 (Jupiter) for unit tests
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
    testImplementation 'org.junit.vintage:junit-vintage-engine:5.9.2'

    // Mockito for mocking
    testImplementation 'org.mockito:mockito-core:5.2.0'
    testImplementation 'org.mockito:mockito-inline:5.2.0'

    // AssertJ for better assertions
    testImplementation 'org.assertj:assertj-core:3.24.1'

    // Android testing - AndroidX Test
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test:runner:1.5.2'
    androidTestImplementation 'androidx.test:rules:1.5.0'

    // Mockito for Android tests
    androidTestImplementation 'org.mockito:mockito-android:5.2.0'

    // Robolectric for unit tests that need Android context
    testImplementation 'org.robolectric:robolectric:4.10'
}

android {
    compileSdkVersion 34
    buildToolsVersion '34.0.0'
    namespace 'org.csploit.android'

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    // Enable buildConfig feature for custom BuildConfig fields
    buildFeatures {
        buildConfig true
    }

    packaging {
        // Modernized packaging configuration (packagingOptions is deprecated)
        resources {
            excludes += ['META-INF/LICENSE.txt', 'META-INF/NOTICE.txt', 'META-INF/LICENSE', 'META-INF/NOTICE']
        }
    }

    defaultConfig {
        minSdkVersion 23  // Updated minimum SDK for better security and features
        targetSdkVersion 34  // Latest target SDK
        versionCode 6
        versionName "1.8.0-stable"
        if(System.getenv("NIGHTLY_BUILD")) {
            versionName += "+" + System.getenv("NIGHTLY_BUILD_COMMIT").substring(0, 7)
        }
    }

    lint {
        // Modernized lint configuration (lintOptions is deprecated)
        if (System.getenv("NIGHTLY_BUILD")) {
            checkReleaseBuilds = false
        }
        abortOnError = false
        // Disable specific warnings that are not relevant
        disable += ['MissingTranslation', 'ExtraTranslation']
        // Enable baseline for tracking known issues
        baseline = file("lint-baseline.xml")
    }

    signingConfigs {
        release {
            def keystoreFile = System.getenv("KEYSTORE_FILE")
            if (keystoreFile != null && keystoreFile != '') {
                storeFile = file(keystoreFile)
                storePassword = System.getenv("KEYSTORE_PWD")
                keyAlias = System.getenv("KEYSTORE_ALIAS")
                keyPassword = System.getenv("KEYSTORE_ALIAS_PWD")
            }
        }
    }

    buildTypes {
        debug {
            buildConfigField "java.util.Date", "BUILD_TIME", "new java.util.Date(" + Calendar.getInstance().getTimeInMillis() + "L)"
            buildConfigField "String", "BUILD_NAME", "\"" + System.getenv("USER") + "\""
            minifyEnabled false
            shrinkResources false
            debuggable true
            jniDebuggable true
            zipAlignEnabled true
            multiDexEnabled true
        }
        release {
            buildConfigField "java.util.Date", "BUILD_TIME", "new java.util.Date(" + Calendar.getInstance().getTimeInMillis() + "L)"
            buildConfigField "String", "BUILD_NAME", "\"" + System.getenv("USER") + "\""
            if (System.getenv("KEYSTORE_FILE") != null) {
                signingConfig signingConfigs.release
            }
            // Enable code optimization and obfuscation for release builds
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            multiDexEnabled true
        }
    }
}
